Possible Fix for Hamburger Menu Not Covering Full Screen

--- a/CSS/mainmobile.css
+++ b/CSS/mainmobile.css
@@ -97,11 +97,8 @@
         display: none;
         position: fixed;
         top: 74px;
-        left: 0;
-        right: 0;
-        bottom: 0;
         width: 100%;
-        height: 100%;
+        height: calc(100dvh - 74px);
         z-index: 900;
         background-color: var(--SiteColorTwo);
         overflow-y: visible;
